# scripts

./: README.md  bootstrap.sh  build-windows.cmd
scripts/: build-windows.cmd  build.sh
templates/: CMakeLists.txt
